--- a/static/home.css
+++ b/static/home.css
@@ -31,6 +31,69 @@
                 transform: translateY(-505);
             }
 
+            .name-alert{
+              
+                width:100%;
+                height:100vh;
+                position: fixed;
+                top:0;
+                left:0;
+                z-index: 100;
+                background-image:url("start.jpg");
+                background-position: center;
+                background-size: 100% 100%;
+                
+            }
+
+            .name-box{
+                position: absolute;
+                top: 130px;
+                left: 50px;
+                width:400px;
+                height:250px;
+                display: flex;
+                flex-direction: column;
+                background-color:transparent;
+            }
+            
+            .name-box input{
+                font-size: 25px;
+                text-align: center;
+            }
+            .name-box h1{
+                color: white;
+                font-size: 35px;
+            }
+
+            .name-box button{
+                padding:15px;
+                color: white;
+                background-color: red;
+                border: none;
+                outline: none;
+                cursor: pointer;
+            }
+
+            
+            .name-box button:hover{
+              
+                color: white;
+                background-color:green;
+            }
+            
+            .name-box label{
+                color:white;
+                font-size: 25px;
+            }
+
+            .name-box div{
+                width:100%;
+                height: 35%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
             header div{
                 position: absolute;
                 right:0;
