--- a/static/home.css
+++ b/static/home.css
@@ -18,7 +18,7 @@
             header{
                 width:100%;
                 height:15vh;
-                background-color: transparent;
+                background-color: black;
                 color:white;
                 text-transform: uppercase;
                 font-size: 20%;
