--- a/static/home.css
+++ b/static/home.css
@@ -407,7 +407,7 @@
                 width:90%;
                 height:100%;
                 background: url("first.jpg");
-                background-position: flex;
+                background-position: center;
                 background-size: 100% 100%;
             }
 
