--- a/static/home.css
+++ b/static/home.css
@@ -406,7 +406,7 @@
                 left:5%;
                 width:90%;
                 height:100%;
-                background: url("first.jpg");
+                background: url("shivam.jpg");
                 background-position: center;
                 background-size: 100% 100%;
             }
